// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`label-image-editor popover direction snapshots should render with DOWN popover direction 1`] = `
<div>
  <div
    class="editor"
  >
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Image
      </span>
      <div
        class="image-row"
      >
        <form
          style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
        >
          <input
            data-style-placeholder="color: #626569;"
            placeholder="URL"
            style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
            value="https://example.com/test-image.png"
          />
        </form>
        <button
          aria-disabled="false"
          aria-label=""
          data-kind="primary"
          data-style-active="background: var(--wb-semanticColor-action-primary-progressive-press-background); border-radius: var(--wb-c-button-root-border-radius-press); color: var(--wb-semanticColor-action-primary-progressive-press-foreground); outline: var(--wb-c-button-root-border-width-primary-press) solid var(--wb-semanticColor-action-primary-progressive-press-border); outline-offset: var(--wb-c-button-root-border-offset-primary);"
          data-style-focus="-webkit-tap-highlight-color: rgba(0,0,0,0);"
          data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
          data-style-media-hover-hover-hover="background: var(--wb-semanticColor-action-primary-progressive-hover-background); border-radius: var(--wb-c-button-root-border-radius-hover); color: var(--wb-semanticColor-action-primary-progressive-hover-foreground); outline: var(--wb-c-button-root-border-width-primary-hover) solid var(--wb-semanticColor-action-primary-progressive-hover-border); outline-offset: var(--wb-c-button-root-border-offset-primary);"
          data-style-moz-focus-inner="border: 0px;"
          style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: center; padding: 0px; border: none; cursor: pointer; outline: none; text-decoration: none; box-sizing: border-box; touch-action: manipulation; user-select: none; height: var(--wb-c-button-root-sizing-height-medium); padding-block: 0px; border-radius: var(--wb-c-button-root-border-radius-default); padding-inline: var(--wb-c-button-root-layout-padding-inline-primary-medium); border-style: solid; border-width: var(--wb-c-button-root-border-width-primary-default); border-color: var(--wb-semanticColor-action-primary-progressive-default-border); background: var(--wb-semanticColor-action-primary-progressive-default-background); color: var(--wb-semanticColor-action-primary-progressive-default-foreground); transition: border-radius 0.1s ease-in-out; min-inline-size: 90px;"
          type="button"
        >
          <span
            style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: inline-block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-c-button-root-font-weight-default); line-height: var(--wb-c-button-root-font-lineHeight-default); align-items: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; pointer-events: none;"
          >
            Remove
          </span>
        </button>
      </div>
    </div>
    <form
      style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); width: 100%;"
    >
      <input
        data-style-placeholder="color: #626569;"
        placeholder="Alt text (for screen readers)"
        style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
        value="Test image alt text"
      />
    </form>
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Markers
      </span>
      <div
        style="font-family: inherit; font-size: 12px; line-height: 14px; margin-block-start: 8px; margin-block-end: 12px; color: #888D93;"
      >
        <span>
          Double-click on the image to add a marker.
          <br />
          <br />
          Markers are read by screen readers in the order that you add them here, so add in a logical order for the learner (e.g. sequentially, clockwise). You can test order by using keyboard tabbing.
        </span>
      </div>
      <div
        style="position: relative; border: solid 1px rgba(33, 36, 44, 0.16); max-inline-size: 400px; max-block-size: 300px;"
      >
        <img
          alt=""
          src="mockStaticUrl(https://example.com/test-image.png)"
          style="display: block; max-inline-size: 100%;"
        />
        <button
          aria-controls=":rc:"
          aria-expanded="false"
          aria-label="Edit marker: First marker"
          id=":rc:-anchor"
          style="position: absolute; appearance: none; padding: 0px; box-sizing: content-box; width: var(--wb-sizing-size_160); height: var(--wb-sizing-size_160); transform: translate(-50%, -50%); cursor: pointer; background: var(--wb-semanticColor-core-background-instructive-default); border: solid 2px var(--wb-semanticColor-core-background-base-default); border-radius: var(--wb-sizing-size_160); box-shadow: 0 2px 10px 0 rgba(33, 36, 44, 0.1); left: 25%; top: 25%;"
          type="button"
        />
        <button
          aria-controls=":rd:"
          aria-expanded="false"
          aria-label="Edit marker: Second marker"
          id=":rd:-anchor"
          style="position: absolute; appearance: none; padding: 0px; box-sizing: content-box; width: var(--wb-sizing-size_160); height: var(--wb-sizing-size_160); transform: translate(-50%, -50%); cursor: pointer; background: var(--wb-semanticColor-core-background-instructive-default); border: solid 2px var(--wb-semanticColor-core-background-base-default); border-radius: var(--wb-sizing-size_160); box-shadow: 0 2px 10px 0 rgba(33, 36, 44, 0.1); left: 50%; top: 50%;"
          type="button"
        />
      </div>
    </div>
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Answer Choices
      </span>
      <ul
        class="answers"
      >
        <li
          class="answer"
        >
          <button
            aria-disabled="false"
            aria-label="Remove answer"
            class="remove-button"
            data-style-moz-focus-inner="border: 0px;"
            style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
            type="button"
          >
            <span
              class="remove-button-content"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(minus-circle.svg);"
              />
            </span>
          </button>
          <form
            style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
          >
            <input
              data-style-placeholder="color: #626569;"
              style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
              value="Choice 1"
            />
          </form>
        </li>
        <li
          class="answer"
        >
          <button
            aria-disabled="false"
            aria-label="Remove answer"
            class="remove-button"
            data-style-moz-focus-inner="border: 0px;"
            style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
            type="button"
          >
            <span
              class="remove-button-content"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(minus-circle.svg);"
              />
            </span>
          </button>
          <form
            style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
          >
            <input
              data-style-placeholder="color: #626569;"
              style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
              value="Choice 2"
            />
          </form>
        </li>
        <li
          class="answer"
        >
          <button
            aria-disabled="false"
            aria-label="Remove answer"
            class="remove-button"
            data-style-moz-focus-inner="border: 0px;"
            style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
            type="button"
          >
            <span
              class="remove-button-content"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(minus-circle.svg);"
              />
            </span>
          </button>
          <form
            style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
          >
            <input
              data-style-placeholder="color: #626569;"
              style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
              value="Choice 3"
            />
          </form>
        </li>
      </ul>
      <button
        aria-disabled="false"
        class="add-answer"
        data-style-moz-focus-inner="border: 0px;"
        style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
        type="button"
      >
        <span
          class="add-answer-content"
        >
          <span
            aria-hidden="true"
            style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(plus-circle.svg);"
          />
          <span
            style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
          >
            Add an answer choice
          </span>
        </span>
      </button>
    </div>
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Behavior
      </span>
      <ul
        class="options-list"
      >
        <li
          class="option"
        >
          <div
            data-checked="false"
            style="position: relative; display: inline-block; vertical-align: middle; line-height: 0; border-radius: 4px; width: 17px; height: 17px; flex-shrink: 0;"
          >
            <svg
              height="17"
              style="position: absolute; inset-inline-start: 0px; inset-block-start: 0px;"
              viewBox="-0.5 -0.5
                         17 17"
              width="17"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <rect
                  fill="var(--wb-semanticColor-core-foreground-knockout-default)"
                  height="15"
                  rx="4"
                  stroke="#888D93"
                  stroke-width="1"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </g>
            </svg>
            <input
              style="appearance: none; opacity: 0; position: absolute; inset-block-start: 0.5px; width: 16px; height: 16px; margin: 0px; outline: none; cursor: pointer;"
              type="checkbox"
            />
          </div>
          <span
            class="label"
          >
            Allow multiple answers per marker
          </span>
        </li>
        <li
          class="option"
        >
          <div
            data-checked="false"
            style="position: relative; display: inline-block; vertical-align: middle; line-height: 0; border-radius: 4px; width: 17px; height: 17px; flex-shrink: 0;"
          >
            <svg
              height="17"
              style="position: absolute; inset-inline-start: 0px; inset-block-start: 0px;"
              viewBox="-0.5 -0.5
                         17 17"
              width="17"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <rect
                  fill="var(--wb-semanticColor-core-foreground-knockout-default)"
                  height="15"
                  rx="4"
                  stroke="#888D93"
                  stroke-width="1"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </g>
            </svg>
            <input
              style="appearance: none; opacity: 0; position: absolute; inset-block-start: 0.5px; width: 16px; height: 16px; margin: 0px; outline: none; cursor: pointer;"
              type="checkbox"
            />
          </div>
          <span
            class="label"
          >
            Do not display answer choices in instructions
          </span>
        </li>
        <li
          class="option"
        >
          <span
            class="label selectLabel"
          >
            Preferred pop-over direction
          </span>
          <select>
            <option
              value="NONE"
            >
               No Preference 
            </option>
            <option
              value="UP"
            >
               Up 
            </option>
            <option
              value="DOWN"
            >
               Down 
            </option>
            <option
              value="LEFT"
            >
               Left 
            </option>
            <option
              value="RIGHT"
            >
               Right 
            </option>
          </select>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`label-image-editor popover direction snapshots should render with LEFT popover direction 1`] = `
<div>
  <div
    class="editor"
  >
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Image
      </span>
      <div
        class="image-row"
      >
        <form
          style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
        >
          <input
            data-style-placeholder="color: #626569;"
            placeholder="URL"
            style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
            value="https://example.com/test-image.png"
          />
        </form>
        <button
          aria-disabled="false"
          aria-label=""
          data-kind="primary"
          data-style-active="background: var(--wb-semanticColor-action-primary-progressive-press-background); border-radius: var(--wb-c-button-root-border-radius-press); color: var(--wb-semanticColor-action-primary-progressive-press-foreground); outline: var(--wb-c-button-root-border-width-primary-press) solid var(--wb-semanticColor-action-primary-progressive-press-border); outline-offset: var(--wb-c-button-root-border-offset-primary);"
          data-style-focus="-webkit-tap-highlight-color: rgba(0,0,0,0);"
          data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
          data-style-media-hover-hover-hover="background: var(--wb-semanticColor-action-primary-progressive-hover-background); border-radius: var(--wb-c-button-root-border-radius-hover); color: var(--wb-semanticColor-action-primary-progressive-hover-foreground); outline: var(--wb-c-button-root-border-width-primary-hover) solid var(--wb-semanticColor-action-primary-progressive-hover-border); outline-offset: var(--wb-c-button-root-border-offset-primary);"
          data-style-moz-focus-inner="border: 0px;"
          style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: center; padding: 0px; border: none; cursor: pointer; outline: none; text-decoration: none; box-sizing: border-box; touch-action: manipulation; user-select: none; height: var(--wb-c-button-root-sizing-height-medium); padding-block: 0px; border-radius: var(--wb-c-button-root-border-radius-default); padding-inline: var(--wb-c-button-root-layout-padding-inline-primary-medium); border-style: solid; border-width: var(--wb-c-button-root-border-width-primary-default); border-color: var(--wb-semanticColor-action-primary-progressive-default-border); background: var(--wb-semanticColor-action-primary-progressive-default-background); color: var(--wb-semanticColor-action-primary-progressive-default-foreground); transition: border-radius 0.1s ease-in-out; min-inline-size: 90px;"
          type="button"
        >
          <span
            style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: inline-block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-c-button-root-font-weight-default); line-height: var(--wb-c-button-root-font-lineHeight-default); align-items: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; pointer-events: none;"
          >
            Remove
          </span>
        </button>
      </div>
    </div>
    <form
      style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); width: 100%;"
    >
      <input
        data-style-placeholder="color: #626569;"
        placeholder="Alt text (for screen readers)"
        style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
        value="Test image alt text"
      />
    </form>
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Markers
      </span>
      <div
        style="font-family: inherit; font-size: 12px; line-height: 14px; margin-block-start: 8px; margin-block-end: 12px; color: #888D93;"
      >
        <span>
          Double-click on the image to add a marker.
          <br />
          <br />
          Markers are read by screen readers in the order that you add them here, so add in a logical order for the learner (e.g. sequentially, clockwise). You can test order by using keyboard tabbing.
        </span>
      </div>
      <div
        style="position: relative; border: solid 1px rgba(33, 36, 44, 0.16); max-inline-size: 400px; max-block-size: 300px;"
      >
        <img
          alt=""
          src="mockStaticUrl(https://example.com/test-image.png)"
          style="display: block; max-inline-size: 100%;"
        />
        <button
          aria-controls=":re:"
          aria-expanded="false"
          aria-label="Edit marker: First marker"
          id=":re:-anchor"
          style="position: absolute; appearance: none; padding: 0px; box-sizing: content-box; width: var(--wb-sizing-size_160); height: var(--wb-sizing-size_160); transform: translate(-50%, -50%); cursor: pointer; background: var(--wb-semanticColor-core-background-instructive-default); border: solid 2px var(--wb-semanticColor-core-background-base-default); border-radius: var(--wb-sizing-size_160); box-shadow: 0 2px 10px 0 rgba(33, 36, 44, 0.1); left: 25%; top: 25%;"
          type="button"
        />
        <button
          aria-controls=":rf:"
          aria-expanded="false"
          aria-label="Edit marker: Second marker"
          id=":rf:-anchor"
          style="position: absolute; appearance: none; padding: 0px; box-sizing: content-box; width: var(--wb-sizing-size_160); height: var(--wb-sizing-size_160); transform: translate(-50%, -50%); cursor: pointer; background: var(--wb-semanticColor-core-background-instructive-default); border: solid 2px var(--wb-semanticColor-core-background-base-default); border-radius: var(--wb-sizing-size_160); box-shadow: 0 2px 10px 0 rgba(33, 36, 44, 0.1); left: 50%; top: 50%;"
          type="button"
        />
      </div>
    </div>
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Answer Choices
      </span>
      <ul
        class="answers"
      >
        <li
          class="answer"
        >
          <button
            aria-disabled="false"
            aria-label="Remove answer"
            class="remove-button"
            data-style-moz-focus-inner="border: 0px;"
            style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
            type="button"
          >
            <span
              class="remove-button-content"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(minus-circle.svg);"
              />
            </span>
          </button>
          <form
            style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
          >
            <input
              data-style-placeholder="color: #626569;"
              style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
              value="Choice 1"
            />
          </form>
        </li>
        <li
          class="answer"
        >
          <button
            aria-disabled="false"
            aria-label="Remove answer"
            class="remove-button"
            data-style-moz-focus-inner="border: 0px;"
            style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
            type="button"
          >
            <span
              class="remove-button-content"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(minus-circle.svg);"
              />
            </span>
          </button>
          <form
            style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
          >
            <input
              data-style-placeholder="color: #626569;"
              style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
              value="Choice 2"
            />
          </form>
        </li>
        <li
          class="answer"
        >
          <button
            aria-disabled="false"
            aria-label="Remove answer"
            class="remove-button"
            data-style-moz-focus-inner="border: 0px;"
            style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
            type="button"
          >
            <span
              class="remove-button-content"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(minus-circle.svg);"
              />
            </span>
          </button>
          <form
            style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
          >
            <input
              data-style-placeholder="color: #626569;"
              style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
              value="Choice 3"
            />
          </form>
        </li>
      </ul>
      <button
        aria-disabled="false"
        class="add-answer"
        data-style-moz-focus-inner="border: 0px;"
        style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
        type="button"
      >
        <span
          class="add-answer-content"
        >
          <span
            aria-hidden="true"
            style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(plus-circle.svg);"
          />
          <span
            style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
          >
            Add an answer choice
          </span>
        </span>
      </button>
    </div>
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Behavior
      </span>
      <ul
        class="options-list"
      >
        <li
          class="option"
        >
          <div
            data-checked="false"
            style="position: relative; display: inline-block; vertical-align: middle; line-height: 0; border-radius: 4px; width: 17px; height: 17px; flex-shrink: 0;"
          >
            <svg
              height="17"
              style="position: absolute; inset-inline-start: 0px; inset-block-start: 0px;"
              viewBox="-0.5 -0.5
                         17 17"
              width="17"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <rect
                  fill="var(--wb-semanticColor-core-foreground-knockout-default)"
                  height="15"
                  rx="4"
                  stroke="#888D93"
                  stroke-width="1"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </g>
            </svg>
            <input
              style="appearance: none; opacity: 0; position: absolute; inset-block-start: 0.5px; width: 16px; height: 16px; margin: 0px; outline: none; cursor: pointer;"
              type="checkbox"
            />
          </div>
          <span
            class="label"
          >
            Allow multiple answers per marker
          </span>
        </li>
        <li
          class="option"
        >
          <div
            data-checked="false"
            style="position: relative; display: inline-block; vertical-align: middle; line-height: 0; border-radius: 4px; width: 17px; height: 17px; flex-shrink: 0;"
          >
            <svg
              height="17"
              style="position: absolute; inset-inline-start: 0px; inset-block-start: 0px;"
              viewBox="-0.5 -0.5
                         17 17"
              width="17"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <rect
                  fill="var(--wb-semanticColor-core-foreground-knockout-default)"
                  height="15"
                  rx="4"
                  stroke="#888D93"
                  stroke-width="1"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </g>
            </svg>
            <input
              style="appearance: none; opacity: 0; position: absolute; inset-block-start: 0.5px; width: 16px; height: 16px; margin: 0px; outline: none; cursor: pointer;"
              type="checkbox"
            />
          </div>
          <span
            class="label"
          >
            Do not display answer choices in instructions
          </span>
        </li>
        <li
          class="option"
        >
          <span
            class="label selectLabel"
          >
            Preferred pop-over direction
          </span>
          <select>
            <option
              value="NONE"
            >
               No Preference 
            </option>
            <option
              value="UP"
            >
               Up 
            </option>
            <option
              value="DOWN"
            >
               Down 
            </option>
            <option
              value="LEFT"
            >
               Left 
            </option>
            <option
              value="RIGHT"
            >
               Right 
            </option>
          </select>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`label-image-editor popover direction snapshots should render with NONE popover direction 1`] = `
<div>
  <div
    class="editor"
  >
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Image
      </span>
      <div
        class="image-row"
      >
        <form
          style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
        >
          <input
            data-style-placeholder="color: #626569;"
            placeholder="URL"
            style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
            value="https://example.com/test-image.png"
          />
        </form>
        <button
          aria-disabled="false"
          aria-label=""
          data-kind="primary"
          data-style-active="background: var(--wb-semanticColor-action-primary-progressive-press-background); border-radius: var(--wb-c-button-root-border-radius-press); color: var(--wb-semanticColor-action-primary-progressive-press-foreground); outline: var(--wb-c-button-root-border-width-primary-press) solid var(--wb-semanticColor-action-primary-progressive-press-border); outline-offset: var(--wb-c-button-root-border-offset-primary);"
          data-style-focus="-webkit-tap-highlight-color: rgba(0,0,0,0);"
          data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
          data-style-media-hover-hover-hover="background: var(--wb-semanticColor-action-primary-progressive-hover-background); border-radius: var(--wb-c-button-root-border-radius-hover); color: var(--wb-semanticColor-action-primary-progressive-hover-foreground); outline: var(--wb-c-button-root-border-width-primary-hover) solid var(--wb-semanticColor-action-primary-progressive-hover-border); outline-offset: var(--wb-c-button-root-border-offset-primary);"
          data-style-moz-focus-inner="border: 0px;"
          style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: center; padding: 0px; border: none; cursor: pointer; outline: none; text-decoration: none; box-sizing: border-box; touch-action: manipulation; user-select: none; height: var(--wb-c-button-root-sizing-height-medium); padding-block: 0px; border-radius: var(--wb-c-button-root-border-radius-default); padding-inline: var(--wb-c-button-root-layout-padding-inline-primary-medium); border-style: solid; border-width: var(--wb-c-button-root-border-width-primary-default); border-color: var(--wb-semanticColor-action-primary-progressive-default-border); background: var(--wb-semanticColor-action-primary-progressive-default-background); color: var(--wb-semanticColor-action-primary-progressive-default-foreground); transition: border-radius 0.1s ease-in-out; min-inline-size: 90px;"
          type="button"
        >
          <span
            style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: inline-block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-c-button-root-font-weight-default); line-height: var(--wb-c-button-root-font-lineHeight-default); align-items: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; pointer-events: none;"
          >
            Remove
          </span>
        </button>
      </div>
    </div>
    <form
      style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); width: 100%;"
    >
      <input
        data-style-placeholder="color: #626569;"
        placeholder="Alt text (for screen readers)"
        style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
        value="Test image alt text"
      />
    </form>
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Markers
      </span>
      <div
        style="font-family: inherit; font-size: 12px; line-height: 14px; margin-block-start: 8px; margin-block-end: 12px; color: #888D93;"
      >
        <span>
          Double-click on the image to add a marker.
          <br />
          <br />
          Markers are read by screen readers in the order that you add them here, so add in a logical order for the learner (e.g. sequentially, clockwise). You can test order by using keyboard tabbing.
        </span>
      </div>
      <div
        style="position: relative; border: solid 1px rgba(33, 36, 44, 0.16); max-inline-size: 400px; max-block-size: 300px;"
      >
        <img
          alt=""
          src="mockStaticUrl(https://example.com/test-image.png)"
          style="display: block; max-inline-size: 100%;"
        />
        <button
          aria-controls=":ri:"
          aria-expanded="false"
          aria-label="Edit marker: First marker"
          id=":ri:-anchor"
          style="position: absolute; appearance: none; padding: 0px; box-sizing: content-box; width: var(--wb-sizing-size_160); height: var(--wb-sizing-size_160); transform: translate(-50%, -50%); cursor: pointer; background: var(--wb-semanticColor-core-background-instructive-default); border: solid 2px var(--wb-semanticColor-core-background-base-default); border-radius: var(--wb-sizing-size_160); box-shadow: 0 2px 10px 0 rgba(33, 36, 44, 0.1); left: 25%; top: 25%;"
          type="button"
        />
        <button
          aria-controls=":rj:"
          aria-expanded="false"
          aria-label="Edit marker: Second marker"
          id=":rj:-anchor"
          style="position: absolute; appearance: none; padding: 0px; box-sizing: content-box; width: var(--wb-sizing-size_160); height: var(--wb-sizing-size_160); transform: translate(-50%, -50%); cursor: pointer; background: var(--wb-semanticColor-core-background-instructive-default); border: solid 2px var(--wb-semanticColor-core-background-base-default); border-radius: var(--wb-sizing-size_160); box-shadow: 0 2px 10px 0 rgba(33, 36, 44, 0.1); left: 50%; top: 50%;"
          type="button"
        />
      </div>
    </div>
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Answer Choices
      </span>
      <ul
        class="answers"
      >
        <li
          class="answer"
        >
          <button
            aria-disabled="false"
            aria-label="Remove answer"
            class="remove-button"
            data-style-moz-focus-inner="border: 0px;"
            style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
            type="button"
          >
            <span
              class="remove-button-content"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(minus-circle.svg);"
              />
            </span>
          </button>
          <form
            style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
          >
            <input
              data-style-placeholder="color: #626569;"
              style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
              value="Choice 1"
            />
          </form>
        </li>
        <li
          class="answer"
        >
          <button
            aria-disabled="false"
            aria-label="Remove answer"
            class="remove-button"
            data-style-moz-focus-inner="border: 0px;"
            style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
            type="button"
          >
            <span
              class="remove-button-content"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(minus-circle.svg);"
              />
            </span>
          </button>
          <form
            style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
          >
            <input
              data-style-placeholder="color: #626569;"
              style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
              value="Choice 2"
            />
          </form>
        </li>
        <li
          class="answer"
        >
          <button
            aria-disabled="false"
            aria-label="Remove answer"
            class="remove-button"
            data-style-moz-focus-inner="border: 0px;"
            style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
            type="button"
          >
            <span
              class="remove-button-content"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(minus-circle.svg);"
              />
            </span>
          </button>
          <form
            style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
          >
            <input
              data-style-placeholder="color: #626569;"
              style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
              value="Choice 3"
            />
          </form>
        </li>
      </ul>
      <button
        aria-disabled="false"
        class="add-answer"
        data-style-moz-focus-inner="border: 0px;"
        style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
        type="button"
      >
        <span
          class="add-answer-content"
        >
          <span
            aria-hidden="true"
            style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(plus-circle.svg);"
          />
          <span
            style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
          >
            Add an answer choice
          </span>
        </span>
      </button>
    </div>
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Behavior
      </span>
      <ul
        class="options-list"
      >
        <li
          class="option"
        >
          <div
            data-checked="false"
            style="position: relative; display: inline-block; vertical-align: middle; line-height: 0; border-radius: 4px; width: 17px; height: 17px; flex-shrink: 0;"
          >
            <svg
              height="17"
              style="position: absolute; inset-inline-start: 0px; inset-block-start: 0px;"
              viewBox="-0.5 -0.5
                         17 17"
              width="17"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <rect
                  fill="var(--wb-semanticColor-core-foreground-knockout-default)"
                  height="15"
                  rx="4"
                  stroke="#888D93"
                  stroke-width="1"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </g>
            </svg>
            <input
              style="appearance: none; opacity: 0; position: absolute; inset-block-start: 0.5px; width: 16px; height: 16px; margin: 0px; outline: none; cursor: pointer;"
              type="checkbox"
            />
          </div>
          <span
            class="label"
          >
            Allow multiple answers per marker
          </span>
        </li>
        <li
          class="option"
        >
          <div
            data-checked="false"
            style="position: relative; display: inline-block; vertical-align: middle; line-height: 0; border-radius: 4px; width: 17px; height: 17px; flex-shrink: 0;"
          >
            <svg
              height="17"
              style="position: absolute; inset-inline-start: 0px; inset-block-start: 0px;"
              viewBox="-0.5 -0.5
                         17 17"
              width="17"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <rect
                  fill="var(--wb-semanticColor-core-foreground-knockout-default)"
                  height="15"
                  rx="4"
                  stroke="#888D93"
                  stroke-width="1"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </g>
            </svg>
            <input
              style="appearance: none; opacity: 0; position: absolute; inset-block-start: 0.5px; width: 16px; height: 16px; margin: 0px; outline: none; cursor: pointer;"
              type="checkbox"
            />
          </div>
          <span
            class="label"
          >
            Do not display answer choices in instructions
          </span>
        </li>
        <li
          class="option"
        >
          <span
            class="label selectLabel"
          >
            Preferred pop-over direction
          </span>
          <select>
            <option
              value="NONE"
            >
               No Preference 
            </option>
            <option
              value="UP"
            >
               Up 
            </option>
            <option
              value="DOWN"
            >
               Down 
            </option>
            <option
              value="LEFT"
            >
               Left 
            </option>
            <option
              value="RIGHT"
            >
               Right 
            </option>
          </select>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`label-image-editor popover direction snapshots should render with RIGHT popover direction 1`] = `
<div>
  <div
    class="editor"
  >
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Image
      </span>
      <div
        class="image-row"
      >
        <form
          style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
        >
          <input
            data-style-placeholder="color: #626569;"
            placeholder="URL"
            style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
            value="https://example.com/test-image.png"
          />
        </form>
        <button
          aria-disabled="false"
          aria-label=""
          data-kind="primary"
          data-style-active="background: var(--wb-semanticColor-action-primary-progressive-press-background); border-radius: var(--wb-c-button-root-border-radius-press); color: var(--wb-semanticColor-action-primary-progressive-press-foreground); outline: var(--wb-c-button-root-border-width-primary-press) solid var(--wb-semanticColor-action-primary-progressive-press-border); outline-offset: var(--wb-c-button-root-border-offset-primary);"
          data-style-focus="-webkit-tap-highlight-color: rgba(0,0,0,0);"
          data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
          data-style-media-hover-hover-hover="background: var(--wb-semanticColor-action-primary-progressive-hover-background); border-radius: var(--wb-c-button-root-border-radius-hover); color: var(--wb-semanticColor-action-primary-progressive-hover-foreground); outline: var(--wb-c-button-root-border-width-primary-hover) solid var(--wb-semanticColor-action-primary-progressive-hover-border); outline-offset: var(--wb-c-button-root-border-offset-primary);"
          data-style-moz-focus-inner="border: 0px;"
          style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: center; padding: 0px; border: none; cursor: pointer; outline: none; text-decoration: none; box-sizing: border-box; touch-action: manipulation; user-select: none; height: var(--wb-c-button-root-sizing-height-medium); padding-block: 0px; border-radius: var(--wb-c-button-root-border-radius-default); padding-inline: var(--wb-c-button-root-layout-padding-inline-primary-medium); border-style: solid; border-width: var(--wb-c-button-root-border-width-primary-default); border-color: var(--wb-semanticColor-action-primary-progressive-default-border); background: var(--wb-semanticColor-action-primary-progressive-default-background); color: var(--wb-semanticColor-action-primary-progressive-default-foreground); transition: border-radius 0.1s ease-in-out; min-inline-size: 90px;"
          type="button"
        >
          <span
            style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: inline-block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-c-button-root-font-weight-default); line-height: var(--wb-c-button-root-font-lineHeight-default); align-items: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; pointer-events: none;"
          >
            Remove
          </span>
        </button>
      </div>
    </div>
    <form
      style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); width: 100%;"
    >
      <input
        data-style-placeholder="color: #626569;"
        placeholder="Alt text (for screen readers)"
        style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
        value="Test image alt text"
      />
    </form>
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Markers
      </span>
      <div
        style="font-family: inherit; font-size: 12px; line-height: 14px; margin-block-start: 8px; margin-block-end: 12px; color: #888D93;"
      >
        <span>
          Double-click on the image to add a marker.
          <br />
          <br />
          Markers are read by screen readers in the order that you add them here, so add in a logical order for the learner (e.g. sequentially, clockwise). You can test order by using keyboard tabbing.
        </span>
      </div>
      <div
        style="position: relative; border: solid 1px rgba(33, 36, 44, 0.16); max-inline-size: 400px; max-block-size: 300px;"
      >
        <img
          alt=""
          src="mockStaticUrl(https://example.com/test-image.png)"
          style="display: block; max-inline-size: 100%;"
        />
        <button
          aria-controls=":rg:"
          aria-expanded="false"
          aria-label="Edit marker: First marker"
          id=":rg:-anchor"
          style="position: absolute; appearance: none; padding: 0px; box-sizing: content-box; width: var(--wb-sizing-size_160); height: var(--wb-sizing-size_160); transform: translate(-50%, -50%); cursor: pointer; background: var(--wb-semanticColor-core-background-instructive-default); border: solid 2px var(--wb-semanticColor-core-background-base-default); border-radius: var(--wb-sizing-size_160); box-shadow: 0 2px 10px 0 rgba(33, 36, 44, 0.1); left: 25%; top: 25%;"
          type="button"
        />
        <button
          aria-controls=":rh:"
          aria-expanded="false"
          aria-label="Edit marker: Second marker"
          id=":rh:-anchor"
          style="position: absolute; appearance: none; padding: 0px; box-sizing: content-box; width: var(--wb-sizing-size_160); height: var(--wb-sizing-size_160); transform: translate(-50%, -50%); cursor: pointer; background: var(--wb-semanticColor-core-background-instructive-default); border: solid 2px var(--wb-semanticColor-core-background-base-default); border-radius: var(--wb-sizing-size_160); box-shadow: 0 2px 10px 0 rgba(33, 36, 44, 0.1); left: 50%; top: 50%;"
          type="button"
        />
      </div>
    </div>
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Answer Choices
      </span>
      <ul
        class="answers"
      >
        <li
          class="answer"
        >
          <button
            aria-disabled="false"
            aria-label="Remove answer"
            class="remove-button"
            data-style-moz-focus-inner="border: 0px;"
            style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
            type="button"
          >
            <span
              class="remove-button-content"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(minus-circle.svg);"
              />
            </span>
          </button>
          <form
            style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
          >
            <input
              data-style-placeholder="color: #626569;"
              style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
              value="Choice 1"
            />
          </form>
        </li>
        <li
          class="answer"
        >
          <button
            aria-disabled="false"
            aria-label="Remove answer"
            class="remove-button"
            data-style-moz-focus-inner="border: 0px;"
            style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
            type="button"
          >
            <span
              class="remove-button-content"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(minus-circle.svg);"
              />
            </span>
          </button>
          <form
            style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
          >
            <input
              data-style-placeholder="color: #626569;"
              style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
              value="Choice 2"
            />
          </form>
        </li>
        <li
          class="answer"
        >
          <button
            aria-disabled="false"
            aria-label="Remove answer"
            class="remove-button"
            data-style-moz-focus-inner="border: 0px;"
            style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
            type="button"
          >
            <span
              class="remove-button-content"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(minus-circle.svg);"
              />
            </span>
          </button>
          <form
            style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
          >
            <input
              data-style-placeholder="color: #626569;"
              style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
              value="Choice 3"
            />
          </form>
        </li>
      </ul>
      <button
        aria-disabled="false"
        class="add-answer"
        data-style-moz-focus-inner="border: 0px;"
        style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
        type="button"
      >
        <span
          class="add-answer-content"
        >
          <span
            aria-hidden="true"
            style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(plus-circle.svg);"
          />
          <span
            style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
          >
            Add an answer choice
          </span>
        </span>
      </button>
    </div>
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Behavior
      </span>
      <ul
        class="options-list"
      >
        <li
          class="option"
        >
          <div
            data-checked="false"
            style="position: relative; display: inline-block; vertical-align: middle; line-height: 0; border-radius: 4px; width: 17px; height: 17px; flex-shrink: 0;"
          >
            <svg
              height="17"
              style="position: absolute; inset-inline-start: 0px; inset-block-start: 0px;"
              viewBox="-0.5 -0.5
                         17 17"
              width="17"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <rect
                  fill="var(--wb-semanticColor-core-foreground-knockout-default)"
                  height="15"
                  rx="4"
                  stroke="#888D93"
                  stroke-width="1"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </g>
            </svg>
            <input
              style="appearance: none; opacity: 0; position: absolute; inset-block-start: 0.5px; width: 16px; height: 16px; margin: 0px; outline: none; cursor: pointer;"
              type="checkbox"
            />
          </div>
          <span
            class="label"
          >
            Allow multiple answers per marker
          </span>
        </li>
        <li
          class="option"
        >
          <div
            data-checked="false"
            style="position: relative; display: inline-block; vertical-align: middle; line-height: 0; border-radius: 4px; width: 17px; height: 17px; flex-shrink: 0;"
          >
            <svg
              height="17"
              style="position: absolute; inset-inline-start: 0px; inset-block-start: 0px;"
              viewBox="-0.5 -0.5
                         17 17"
              width="17"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <rect
                  fill="var(--wb-semanticColor-core-foreground-knockout-default)"
                  height="15"
                  rx="4"
                  stroke="#888D93"
                  stroke-width="1"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </g>
            </svg>
            <input
              style="appearance: none; opacity: 0; position: absolute; inset-block-start: 0.5px; width: 16px; height: 16px; margin: 0px; outline: none; cursor: pointer;"
              type="checkbox"
            />
          </div>
          <span
            class="label"
          >
            Do not display answer choices in instructions
          </span>
        </li>
        <li
          class="option"
        >
          <span
            class="label selectLabel"
          >
            Preferred pop-over direction
          </span>
          <select>
            <option
              value="NONE"
            >
               No Preference 
            </option>
            <option
              value="UP"
            >
               Up 
            </option>
            <option
              value="DOWN"
            >
               Down 
            </option>
            <option
              value="LEFT"
            >
               Left 
            </option>
            <option
              value="RIGHT"
            >
               Right 
            </option>
          </select>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`label-image-editor popover direction snapshots should render with UP popover direction 1`] = `
<div>
  <div
    class="editor"
  >
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Image
      </span>
      <div
        class="image-row"
      >
        <form
          style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
        >
          <input
            data-style-placeholder="color: #626569;"
            placeholder="URL"
            style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
            value="https://example.com/test-image.png"
          />
        </form>
        <button
          aria-disabled="false"
          aria-label=""
          data-kind="primary"
          data-style-active="background: var(--wb-semanticColor-action-primary-progressive-press-background); border-radius: var(--wb-c-button-root-border-radius-press); color: var(--wb-semanticColor-action-primary-progressive-press-foreground); outline: var(--wb-c-button-root-border-width-primary-press) solid var(--wb-semanticColor-action-primary-progressive-press-border); outline-offset: var(--wb-c-button-root-border-offset-primary);"
          data-style-focus="-webkit-tap-highlight-color: rgba(0,0,0,0);"
          data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
          data-style-media-hover-hover-hover="background: var(--wb-semanticColor-action-primary-progressive-hover-background); border-radius: var(--wb-c-button-root-border-radius-hover); color: var(--wb-semanticColor-action-primary-progressive-hover-foreground); outline: var(--wb-c-button-root-border-width-primary-hover) solid var(--wb-semanticColor-action-primary-progressive-hover-border); outline-offset: var(--wb-c-button-root-border-offset-primary);"
          data-style-moz-focus-inner="border: 0px;"
          style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: center; padding: 0px; border: none; cursor: pointer; outline: none; text-decoration: none; box-sizing: border-box; touch-action: manipulation; user-select: none; height: var(--wb-c-button-root-sizing-height-medium); padding-block: 0px; border-radius: var(--wb-c-button-root-border-radius-default); padding-inline: var(--wb-c-button-root-layout-padding-inline-primary-medium); border-style: solid; border-width: var(--wb-c-button-root-border-width-primary-default); border-color: var(--wb-semanticColor-action-primary-progressive-default-border); background: var(--wb-semanticColor-action-primary-progressive-default-background); color: var(--wb-semanticColor-action-primary-progressive-default-foreground); transition: border-radius 0.1s ease-in-out; min-inline-size: 90px;"
          type="button"
        >
          <span
            style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: inline-block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-c-button-root-font-weight-default); line-height: var(--wb-c-button-root-font-lineHeight-default); align-items: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; pointer-events: none;"
          >
            Remove
          </span>
        </button>
      </div>
    </div>
    <form
      style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); width: 100%;"
    >
      <input
        data-style-placeholder="color: #626569;"
        placeholder="Alt text (for screen readers)"
        style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
        value="Test image alt text"
      />
    </form>
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Markers
      </span>
      <div
        style="font-family: inherit; font-size: 12px; line-height: 14px; margin-block-start: 8px; margin-block-end: 12px; color: #888D93;"
      >
        <span>
          Double-click on the image to add a marker.
          <br />
          <br />
          Markers are read by screen readers in the order that you add them here, so add in a logical order for the learner (e.g. sequentially, clockwise). You can test order by using keyboard tabbing.
        </span>
      </div>
      <div
        style="position: relative; border: solid 1px rgba(33, 36, 44, 0.16); max-inline-size: 400px; max-block-size: 300px;"
      >
        <img
          alt=""
          src="mockStaticUrl(https://example.com/test-image.png)"
          style="display: block; max-inline-size: 100%;"
        />
        <button
          aria-controls=":ra:"
          aria-expanded="false"
          aria-label="Edit marker: First marker"
          id=":ra:-anchor"
          style="position: absolute; appearance: none; padding: 0px; box-sizing: content-box; width: var(--wb-sizing-size_160); height: var(--wb-sizing-size_160); transform: translate(-50%, -50%); cursor: pointer; background: var(--wb-semanticColor-core-background-instructive-default); border: solid 2px var(--wb-semanticColor-core-background-base-default); border-radius: var(--wb-sizing-size_160); box-shadow: 0 2px 10px 0 rgba(33, 36, 44, 0.1); left: 25%; top: 25%;"
          type="button"
        />
        <button
          aria-controls=":rb:"
          aria-expanded="false"
          aria-label="Edit marker: Second marker"
          id=":rb:-anchor"
          style="position: absolute; appearance: none; padding: 0px; box-sizing: content-box; width: var(--wb-sizing-size_160); height: var(--wb-sizing-size_160); transform: translate(-50%, -50%); cursor: pointer; background: var(--wb-semanticColor-core-background-instructive-default); border: solid 2px var(--wb-semanticColor-core-background-base-default); border-radius: var(--wb-sizing-size_160); box-shadow: 0 2px 10px 0 rgba(33, 36, 44, 0.1); left: 50%; top: 50%;"
          type="button"
        />
      </div>
    </div>
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Answer Choices
      </span>
      <ul
        class="answers"
      >
        <li
          class="answer"
        >
          <button
            aria-disabled="false"
            aria-label="Remove answer"
            class="remove-button"
            data-style-moz-focus-inner="border: 0px;"
            style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
            type="button"
          >
            <span
              class="remove-button-content"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(minus-circle.svg);"
              />
            </span>
          </button>
          <form
            style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
          >
            <input
              data-style-placeholder="color: #626569;"
              style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
              value="Choice 1"
            />
          </form>
        </li>
        <li
          class="answer"
        >
          <button
            aria-disabled="false"
            aria-label="Remove answer"
            class="remove-button"
            data-style-moz-focus-inner="border: 0px;"
            style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
            type="button"
          >
            <span
              class="remove-button-content"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(minus-circle.svg);"
              />
            </span>
          </button>
          <form
            style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
          >
            <input
              data-style-placeholder="color: #626569;"
              style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
              value="Choice 2"
            />
          </form>
        </li>
        <li
          class="answer"
        >
          <button
            aria-disabled="false"
            aria-label="Remove answer"
            class="remove-button"
            data-style-moz-focus-inner="border: 0px;"
            style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
            type="button"
          >
            <span
              class="remove-button-content"
            >
              <span
                aria-hidden="true"
                style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(minus-circle.svg);"
              />
            </span>
          </button>
          <form
            style="height: 40px; border-radius: 4px; box-sizing: border-box; padding-block: 8px; padding-inline: 10px; display: inline-flex; align-items: center; margin-block-end: 0px; background-color: var(--wb-semanticColor-core-background-base-default); flex-grow: 1;"
          >
            <input
              data-style-placeholder="color: #626569;"
              style="background: inherit; border: none; font-family: inherit; font-size: 15px; line-height: 22px; outline: none; width: 100%; color: inherit; margin-block-end: 0px; padding-inline-start: 0px; box-shadow: none; padding: 0px; margin: 0px;"
              value="Choice 3"
            />
          </form>
        </li>
      </ul>
      <button
        aria-disabled="false"
        class="add-answer"
        data-style-moz-focus-inner="border: 0px;"
        style="margin: 0px; border: none; padding: 0px; width: auto; overflow: visible; background: var(--wb-semanticColor-core-transparent); text-decoration: none; color: inherit; font: inherit; box-sizing: border-box; touch-action: manipulation; user-select: none; outline: none; line-height: normal; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; cursor: pointer;"
        type="button"
      >
        <span
          class="add-answer-content"
        >
          <span
            aria-hidden="true"
            style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_240); height: var(--wb-sizing-size_240); background-color: currentColor; mask-image: url(plus-circle.svg);"
          />
          <span
            style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
          >
            Add an answer choice
          </span>
        </span>
      </button>
    </div>
    <div>
      <span
        style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
      >
        Behavior
      </span>
      <ul
        class="options-list"
      >
        <li
          class="option"
        >
          <div
            data-checked="false"
            style="position: relative; display: inline-block; vertical-align: middle; line-height: 0; border-radius: 4px; width: 17px; height: 17px; flex-shrink: 0;"
          >
            <svg
              height="17"
              style="position: absolute; inset-inline-start: 0px; inset-block-start: 0px;"
              viewBox="-0.5 -0.5
                         17 17"
              width="17"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <rect
                  fill="var(--wb-semanticColor-core-foreground-knockout-default)"
                  height="15"
                  rx="4"
                  stroke="#888D93"
                  stroke-width="1"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </g>
            </svg>
            <input
              style="appearance: none; opacity: 0; position: absolute; inset-block-start: 0.5px; width: 16px; height: 16px; margin: 0px; outline: none; cursor: pointer;"
              type="checkbox"
            />
          </div>
          <span
            class="label"
          >
            Allow multiple answers per marker
          </span>
        </li>
        <li
          class="option"
        >
          <div
            data-checked="false"
            style="position: relative; display: inline-block; vertical-align: middle; line-height: 0; border-radius: 4px; width: 17px; height: 17px; flex-shrink: 0;"
          >
            <svg
              height="17"
              style="position: absolute; inset-inline-start: 0px; inset-block-start: 0px;"
              viewBox="-0.5 -0.5
                         17 17"
              width="17"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <rect
                  fill="var(--wb-semanticColor-core-foreground-knockout-default)"
                  height="15"
                  rx="4"
                  stroke="#888D93"
                  stroke-width="1"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
              </g>
            </svg>
            <input
              style="appearance: none; opacity: 0; position: absolute; inset-block-start: 0.5px; width: 16px; height: 16px; margin: 0px; outline: none; cursor: pointer;"
              type="checkbox"
            />
          </div>
          <span
            class="label"
          >
            Do not display answer choices in instructions
          </span>
        </li>
        <li
          class="option"
        >
          <span
            class="label selectLabel"
          >
            Preferred pop-over direction
          </span>
          <select>
            <option
              value="NONE"
            >
               No Preference 
            </option>
            <option
              value="UP"
            >
               Up 
            </option>
            <option
              value="DOWN"
            >
               Down 
            </option>
            <option
              value="LEFT"
            >
               Left 
            </option>
            <option
              value="RIGHT"
            >
               Right 
            </option>
          </select>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
